# mosze

./: .gitignore  CMakeLists.txt  Dockerfile  OOP_olvaso.cpp  README.md  copy_from_text_file.hpp  docker-compose.yml  filename.txt  main.cpp
.github/workflows/: main.yml
docker/: Dockerfile  docker-compose.yml
src/: CMakeLists.txt  Dockerfile  copy_from_text_file.cpp
tests/: CMakeLists.txt  Dockerfile  copy_from_text_file.cpp  copytextfromtxtfile.cc
valgrind/: Dockerfile  copy_from_text_file.hpp  main.cpp
